# heesch-forge

./: .gitignore  CLAUDE.md  LITERATURE.md  PROPOSAL.md  README.md  ROADMAP.md
benchmarks/baseline/: README.md  run_baseline.py
benchmarks/baseline/results/: m0.5-baseline.jsonl  m1.1-cadical-baseline.jsonl  m1.1-comparison.md  m1.2a-comparison.md  m1.2a-kissat-baseline.jsonl
benchmarks/breakid/: README.md
benchmarks/breakid/probe/: cms_solve.cpp  run_probe.sh
benchmarks/breakid/results/: m1.3-probe.csv
benchmarks/hybrid/: Makefile  README.md  bounded_dlx.cpp  compare_dlx_sat.py  run_bounded_joint.py  run_hybrid.cpp  run_joint.py
benchmarks/kaplan/: README.md  run_regression.py
benchmarks/lateral/: M3.4-cross-grid-catalogue.md  README.md  run_bevelhex_sweep.sh  run_octasquare_sweep.sh
benchmarks/maxsat/: M2.6-followup-B-attempt.md  README.md  run_rc2.py
benchmarks/rl/: M4.1-mdp.md  M4.2-results.md  M4.3-results.md
data/kaplan-2022/: PROVENANCE.md
paper/drafts/: phase1-engineering-negatives.md  phase2-engineering-hybrid.md  phase3-lateral-grids.md
paper/lit/: .gitignore  README.md  bibtex.bib  fetch_pdfs.sh
src/corona/: Makefile  corona_state.cpp  corona_state.hpp  heesch_solver.cpp  heesch_solver.hpp  oracle.cpp  oracle.hpp
src/dlx/: Makefile  dlx.cpp  dlx.hpp
src/rl/: README.md  pyproject.toml
src/rl/heesch_rl/: __init__.py  baseline.py  canonical.py  env.py  oracle.py  policy.py  trainer.py  training_runner.py  trajectory.py
src/rl/tests/: test_canonical.py  test_env.py  test_oracle.py  test_trainer.py
src/sat/: .gitignore  UPSTREAM.md
(+70 files in other folders)
