[project]
name = "heesch-rl"
version = "0.1.0"
description = "Phase-4 RL pilot for heesch-forge: deep cross-entropy over polyomino construction"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0,<3.0",
    "torch>=2.4,<3.0",
    "torch-geometric>=2.6,<3.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0,<9.0",
]

[tool.uv]
package = false

# Use CPU-only torch wheels -- M4.x runs on CPU only (M4.1 §9).
# This avoids the ~2 GB CUDA download and the build-time chain of
# nvidia-* deps that aren't needed on Shane's ThinkPad.
[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.pytest.ini_options]
testpaths = ["tests"]
